<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="google_map_key">AIzaSyCIbpfqrVHaUIinRgn8uS8kbQh4AF0iUac</string>
    <string name="app_name">Prottoyee</string>
    <string name="app_home">Home</string>

    <!-- Dashboard -->
    <string name="emergency_help">Emergency Help</string>
    <string name="file_complaint">File Complaint</string>
    <string name="awareness_portal">Awareness Portal</string>
    <string name="heat_map">Heat Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="registration_title">Registration / Login</string>
    <string name="registration_text">Please enter your mobile number.
        We will send a sms contain verification code for registration. Your privacy will be ensured.</string>
    <string name="registration_verification_code_title">Please enter the 6 digit code we just sent to the mobile number you mentioned.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_heatmap">Heatmap</string>
    <string name="i_saw_this">I saw this</string>
    <string name="i_experienced_this">I experienced this</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_next">Next</string>
    <string name="location_of_incident">Location of Incident</string>

    <array name="category">
        <item>Select that apply</item>
        <item>Abuse</item>
        <item>Eve teasing</item>
        <item>Assault</item>
        <item>Groping</item>
        <item>Stalking</item>
        <item>Other</item>
    </array>

    <!-- Heatmap -->
    <string name="tell_your_story">Tell Your Story</string>
    <string name="hint_your_story">Your story…</string>
    <string name="label_story_input">
        Share your story. Select a category and provide your story. click Next to select place of the incident.
    </string>
    <string name="hint_counter">5000</string>
    <string name="place_of_incident">Place of Incident</string>
    <string name="label_location_share">
        Tap on a place in the map to identify the place of the incident. Click Submit to share your story.
    </string>
    <string name="turn_on_location_service_title">Turn on Location</string>
    <string name="go_to_location_settings">Location Settings</string>
    <string name="map_loading_wait_help_test">
        Please wait a few moments while your current position is identified on the map.
    </string>
    <string name="list_empty_msg">Nothing found to display.</string>

    <!--Counseling -->
    <string name="agreement_message">
        Ask your questions to our expert counselors. They will try to help with your issues.
        Your privacy will be strictly maintained.
    </string>
    <string name="ok">OK</string>
    <string name="counseling">Counseling</string>
    <string name="sender_me">Me</string>
    <string name="sender_counselor">Counselor</string>
    <string name="title_activity_complaint">ComplaintActivity</string>
    <string name="label_story_complaint_inptu">Your complaint will be forwared to Mohila Bishoyok Odhidoptor. Your
        privacy is very important to us.</string>
    <string name="label_complaint_title">Title</string>
    <string name="label_complaint_attachment">Attachment(Optional)</string>
    <string name="label_contact_number">Contact Number</string>
    <string name="label_user_name">User Name</string>
    <string name="label_relation_ship">Relationship with you -</string>
    <string name="title_activity_complaint_list">ComplaintListActivity</string>

    <!-- Awareness Portal -->
    <string name="awareness_categories">Categories</string>
    <string name="awareness_threads">Open Threads</string>
    <string name="add_new_thread">Add New Thread</string>
    <string name="thread_title">Give Your Post A Title</string>
    <string name="thread_content">Type Your Message Here</string>
    <string name="thread_add_success">Thread Added Successfully</string>
    <string name="btn_add_another">Add Another Thread</string>
    <string name="btn_view_thread_list">View Open Threads</string>
    <string name="pointer">Map Pointer</string>
    <string name="title_activity_story_details">Story Details</string>

</resources>
