<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText android:id="@+id/thread_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/thread_title"/>

    <EditText android:id="@+id/thread_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lines="5"
              android:hint="@string/thread_content"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_submit"
            android:onClick="onNewThreadPostClick"/>

</LinearLayout>