<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:text="@string/thread_add_success"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/btn_view_thread_list"
                android:onClick="onViewThreadListClick"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:text="@string/btn_add_another"
                android:onClick="onAddNewThreadClick"/>
    </LinearLayout>

</LinearLayout>